tests/rosetta/transpiler/Pascal/dijkstras-algorithm.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/dijkstras-algorithm.pas
dijkstras-algorithm.pas(9,45) Error: Illegal expression
dijkstras-algorithm.pas(9,46) Error: Type identifier expected
dijkstras-algorithm.pas(9,46) Fatal: Syntax error, "," expected but ";" found
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
